--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,2 +1,2 @@
 <h1>Página de Bienvenida</h1>
-<p>Acá irá el link al Dashboard</p>
+<p>Acá ingrese al <%= link_to "Dashboard", projects_dashboard_path %>
